--- a/index.html
+++ b/index.html
@@ -590,15 +590,17 @@
     </section>
 
     <section id="about" class="section intro-section">
-        <h2>自己紹介</h2>
-        <div class="intro-content">
-            <p style="font-size: 1.2rem; line-height: 1.9;">
-                はじめまして。着付けサービス【KIRAKIRA】です。<br><br>
-                着付け講習を1年学び、実務経験は5年。着崩れしない・苦しくない着付けを心がけています。<br>
-                ハートフルな接客で、初めての方にも安心してお任せいただけます。<br>
-                ヘアセットにも対応しており、トータルで美しい着物姿をお手伝いいたします。
-            </p>
-        </div>
+        <section class="fade-in delay-1" style="background: url('gallery7.jpeg') center/cover no-repeat; background-color: rgba(255,255,255,0.7); background-blend-mode: lighten;">
+            <h2>自己紹介</h2>
+            <div class="intro-content">
+                <p style="font-size: 1.2rem; line-height: 1.9;">
+                    はじめまして。着付けサービス【KIRAKIRA】です。<br><br>
+                    着付け講習を1年学び、実務経験は5年。着崩れしない・苦しくない着付けを心がけています。<br>
+                    ハートフルな接客で、初めての方にも安心してお任せいただけます。<br>
+                    ヘアセットにも対応しており、トータルで美しい着物姿をお手伝いいたします。
+                </p>
+            </div>
+        </section>
     </section>
 
     <section id="services" class="section services-section">
