--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
     </section>
 
     <section id="about" class="section intro-section">
-    <section class="fade-in delay-1" style="background: url('gallery7.jpeg') center/cover no-repeat; background-color: rgba(255,255,255,0.2); background-blend-mode: lighten;">
+    <section class="fade-in delay-1" style="background: linear-gradient(135deg, #fdf2f8 0%, #fce7f3 25%, #fbcfe8 50%, #f9a8d4 75%, #f472b6 100%); box-shadow: inset 0 0 50px rgba(244, 114, 182, 0.1);">
         <h2>自己紹介</h2>
         <div class="intro-content">
             <p style="font-size: 1.2rem; line-height: 1.9;">
