--- a/index.html
+++ b/index.html
@@ -135,9 +135,14 @@
         }
 
         .section {
-            padding: 6rem 2rem;
+            padding: 6rem 0;
+            width: 100%;
+        }
+
+        .section-inner {
             max-width: 1400px;
             margin: 0 auto;
+            padding: 0 2rem;
         }
 
         .section h2 {
@@ -163,7 +168,7 @@
         }
 
         .intro-section {
-            background: linear-gradient(135deg, #fff 0%, #fef7f7 50%, #fff5f8 100%);
+            background: url('gallery5.jpeg') center/cover;
             position: relative;
         }
 
@@ -174,48 +179,26 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="10" cy="10" r="1" fill="rgba(255,107,157,0.1)"/><circle cx="90" cy="90" r="1.5" fill="rgba(255,168,197,0.1)"/><circle cx="50" cy="30" r="0.5" fill="rgba(255,107,157,0.15)"/></svg>') repeat;
-            opacity: 0.5;
+            background: rgba(255, 255, 255, 0.9);
         }
 
         .intro-content {
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(20px);
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(25px);
             padding: 4rem 3rem;
             border-radius: 30px;
-            box-shadow: 0 30px 100px rgba(214, 51, 132, 0.1);
+            box-shadow: 0 30px 100px rgba(214, 51, 132, 0.15);
             margin: 2rem auto;
             max-width: 800px;
             text-align: center;
             position: relative;
             border: 1px solid rgba(255, 255, 255, 0.3);
             transition: all 0.4s ease;
-            background-image: url('gallery5.jpeg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .intro-content::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(255, 255, 255, 0.85);
-            border-radius: 30px;
-            z-index: 1;
-        }
-
-        .intro-content > * {
-            position: relative;
-            z-index: 2;
         }
 
         .intro-content:hover {
             transform: translateY(-8px);
-            box-shadow: 0 40px 120px rgba(214, 51, 132, 0.15);
+            box-shadow: 0 40px 120px rgba(214, 51, 132, 0.2);
         }
 
         .services-section {
@@ -225,9 +208,20 @@
 
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-            gap: 3rem;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 2.5rem;
             margin-top: 4rem;
+        }
+
+        .services-grid .service-card:nth-child(4) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
+
+        .services-grid .service-card:nth-child(5) {
+            grid-column: 2 / 4;
+            grid-row: 2 / 3;
         }
 
         .service-card {
@@ -324,8 +318,8 @@
         }
 
         .info-card {
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(20px);
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(25px);
             padding: 3.5rem 2.5rem;
             border-radius: 25px;
             box-shadow: 0 25px 80px rgba(16, 185, 129, 0.08);
@@ -338,8 +332,13 @@
             background-repeat: no-repeat;
         }
 
-        .info-card.area { background-image: url('gallery11.jpeg'); }
-        .info-card.time { background-image: url('gallery12.jpeg'); }
+        .info-card.area { 
+            background-image: url('gallery11.jpeg');
+        }
+        
+        .info-card.time { 
+            background-image: url('gallery12.jpeg');
+        }
 
         .info-card::after {
             content: '';
@@ -348,7 +347,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(255, 255, 255, 0.88);
+            background: rgba(255, 255, 255, 0.9);
             border-radius: 25px;
             z-index: 1;
         }
@@ -375,8 +374,24 @@
         }
 
         .gallery-section {
-            background: linear-gradient(135deg, #fef7f7 0%, #fff 50%, #fff5f8 100%);
+            background: url('gallery13.jpeg') center/cover;
             text-align: center;
+            position: relative;
+        }
+
+        .gallery-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(255, 255, 255, 0.85);
+        }
+
+        .gallery-section .section-inner {
+            position: relative;
+            z-index: 2;
         }
 
         .gallery-link {
@@ -532,9 +547,19 @@
         @media (max-width: 768px) {
             .hero h1 { font-size: 2.8rem; }
             .hero .subtitle { font-size: 1.1rem; }
-            .section { padding: 4rem 1rem; }
+            .section { padding: 4rem 0; }
+            .section-inner { padding: 0 1rem; }
             .section h2 { font-size: 2.2rem; }
-            .services-grid { grid-template-columns: 1fr; gap: 2rem; }
+            .services-grid { 
+                grid-template-columns: 1fr; 
+                grid-template-rows: auto;
+                gap: 2rem; 
+            }
+            .services-grid .service-card:nth-child(4),
+            .services-grid .service-card:nth-child(5) {
+                grid-column: auto;
+                grid-row: auto;
+            }
             .nav-links { display: none; }
             .hero-content { padding: 2rem; }
             .service-card, .info-card, .contact-card { padding: 2rem; }
@@ -590,119 +615,115 @@
     </section>
 
     <section id="about" class="section intro-section">
-    <section class="fade-in delay-1" style="background: linear-gradient(135deg, #fdf2f8 0%, #fce7f3 25%, #fbcfe8 50%, #f9a8d4 75%, #f472b6 100%); box-shadow: inset 0 0 50px rgba(244, 114, 182, 0.1);">
-        <h2>自己紹介</h2>
-        <div class="intro-content">
-            <p style="font-size: 1.2rem; line-height: 1.9;">
-                はじめまして。着付けサービス【KIRAKIRA】です。<br>
-                着付け講習を1年学び、<br>実務経験は5年。着崩れしない・苦しくない着付けを心がけています。<br>
-                ハートフルな接客で、初めての方にも安心してお任せいただけます。<br>
-                ヘアセットにも対応しており、トータルで美しい着物姿をお手伝いいたします。
-            </p>
+        <div class="section-inner">
+            <h2>自己紹介</h2>
+            <div class="intro-content">
+                <p style="font-size: 1.2rem; line-height: 1.9;">
+                    はじめまして。着付けサービス【KIRAKIRA】です。<br>
+                    着付け講習を1年学び、<br>実務経験は5年。着崩れしない・苦しくない着付けを心がけています。<br>
+                    ハートフルな接客で、初めての方にも安心してお任せいただけます。<br>
+                    ヘアセットにも対応しており、トータルで美しい着物姿をお手伝いいたします。
+                </p>
+            </div>
         </div>
     </section>
-</section>
 
     <section id="services" class="section services-section">
-        <h2>サービス</h2>
-        <div class="services-grid">
-            <div class="service-card houmon">
-                <h3>👘 訪問着付け</h3>
-                <p>留袖・訪問着の着付けを丁寧に承ります。特別な日を美しく彩ります。</p>
-                <div class="price">￥7,000〜</div>
-            </div>
-            <div class="service-card furisode">
-                <h3>🎎 振袖着付け</h3>
-                <p>成人式・卒業式などの人生の大切な節目を華やかに演出いたします。</p>
-                <div class="price">￥10,000〜</div>
-            </div>
-            <div class="service-card shichigosan">
-                <h3>👶 七五三着付け</h3>
-                <p>3歳・5歳・7歳のお子様の成長をお祝いする大切な日のお手伝い。</p>
-                <div class="price">￥6,000〜</div>
-            </div>
-            <div class="service-card hakama">
-                <h3>🤵 男性袴着付け</h3>
-                <p>卒業式や成人式など、男性の袴着付けも丁寧に承ります。</p>
-                <div class="price">￥8,000〜</div>
-            </div>
-            <div class="service-card hair">
-                <h3>💇‍♀️ ヘアセット</h3>
-                <p>洋髪・和髪対応のプロフェッショナルなヘアセットサービス。</p>
-                <div class="price">￥3,000〜</div>
+        <div class="section-inner">
+            <h2>サービス</h2>
+            <div class="services-grid">
+                <div class="service-card houmon">
+                    <h3>👘 訪問着付け</h3>
+                    <p>留袖・訪問着の着付けを丁寧に承ります。特別な日を美しく彩ります。</p>
+                    <div class="price">￥7,000〜</div>
+                </div>
+                <div class="service-card furisode">
+                    <h3>🎎 振袖着付け</h3>
+                    <p>成人式・卒業式などの人生の大切な節目を華やかに演出いたします。</p>
+                    <div class="price">￥10,000〜</div>
+                </div>
+                <div class="service-card shichigosan">
+                    <h3>👶 七五三着付け</h3>
+                    <p>3歳・5歳・7歳のお子様の成長をお祝いする大切な日のお手伝い。</p>
+                    <div class="price">￥6,000〜</div>
+                </div>
+                <div class="service-card hakama">
+                    <h3>🤵 男性袴着付け</h3>
+                    <p>卒業式や成人式など、男性の袴着付けも丁寧に承ります。</p>
+                    <div class="price">￥8,000〜</div>
+                </div>
+                <div class="service-card hair">
+                    <h3>💇‍♀️ ヘアセット</h3>
+                    <p>洋髪・和髪対応のプロフェッショナルなヘアセットサービス。</p>
+                    <div class="price">￥3,000〜</div>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="section area-time-section">
-        <h2>対応エリア・時間</h2>
-        <div class="area-time-content">
-            <div class="info-card area">
-                <div class="icon">📍</div>
-                <h3>対応エリア</h3>
-                <p style="font-size: 1.1rem; line-height: 1.7;">
-                    <strong>東京都</strong><br>江戸川区・江東区<br><br>
-                    <strong>千葉県</strong><br>浦安市・市川市
-                </p>
-            </div>
-            <div class="info-card time">
-                <div class="icon">🕰️</div>
-                <h3>営業時間</h3>
-                <p style="font-size: 1.1rem; line-height: 1.7;">
-                    <strong>要相談</strong><br>
-                    朝〜夕方中心<br>
-                    土日祝もご相談可能
-                </p>
+        <div class="section-inner">
+            <h2>対応エリア・時間</h2>
+            <div class="area-time-content">
+                <div class="info-card area">
+                    <div class="icon">📍</div>
+                    <h3>対応エリア</h3>
+                    <p style="font-size: 1.1rem; line-height: 1.7;">
+                        <strong>東京都</strong><br>江戸川区・江東区<br><br>
+                        <strong>千葉県</strong><br>浦安市・市川市
+                    </p>
+                </div>
+                <div class="info-card time">
+                    <div class="icon">🕰️</div>
+                    <h3>営業時間</h3>
+                    <p style="font-size: 1.1rem; line-height: 1.7;">
+                        <strong>要相談</strong><br>
+                        朝〜夕方中心<br>
+                        土日祝もご相談可能
+                    </p>
+                </div>
             </div>
         </div>
     </section>
 
     <section id="gallery" class="section gallery-section">
-        <h2>ギャラリー</h2>
-        <p style="font-size: 1.2rem; margin-bottom: 3rem; line-height: 1.8; max-width: 800px; margin-left: auto; margin-right: auto;">
-            実際の着付けの様子や美しい着物姿をInstagramでご覧いただけます。<br>
-            プロフェッショナルな技術で仕上げた作品を多数掲載しております。
-        </p>
-        <a href="https://www.instagram.com/kirakira.nana.kituke_hairset" target="_blank" class="gallery-link">
-            📸 Instagramギャラリーを見る
-        </a>
-    </section>
-
-    <section id="contact" class="section contact-section">
-        <h2 style="color: white;">予約・お問い合わせ</h2>
-        <p style="text-align: center; font-size: 1.2rem; opacity: 0.9; margin-bottom: 2rem;">
-            お気軽にお問い合わせください。丁寧にご対応いたします。
-        </p>
-        <div class="contact-methods">
-            <div class="contact-card">
-                <div class="icon">📧</div>
-                <h3>メール</h3>
-                <p style="margin: 1rem 0;">件名：着付け依頼</p>
-                <a href="mailto:kiki_lala112@yahoo.co.jp">kiki_lala112@yahoo.co.jp</a>
-            </div>
-            <div class="contact-card">
-                <div class="icon">📲</div>
-                <h3>Instagram DM</h3>
-                <p style="margin: 1rem 0;">お気軽にメッセージをどうぞ</p>
-                <a href="https://www.instagram.com/kirakira.nana.kituke_hairset" target="_blank">@kirakira.nana.kituke_hairset</a>
-            </div>
-            <div class="contact-card">
-                <div class="icon">📝</div>
-                <h3>Googleフォーム</h3>
-                <p style="margin: 1rem 0;">24時間受付可能</p>
-                <a href="https://forms.gle/Z8qCqXs7BnFrrM6x9" target="_blank">フォームはこちら</a>
-            </div>
+        <div class="section-inner">
+            <h2>ギャラリー</h2>
+            <p style="font-size: 1.2rem; margin-bottom: 3rem; line-height: 1.8; max-width: 800px; margin-left: auto; margin-right: auto;">
+                実際の着付けの様子や美しい着物姿をInstagramでご覧いただけます。<br>
+                プロフェッショナルな技術で仕上げた作品を多数掲載しております。
+            </p>
+            <a href="https://www.instagram.com/kirakira.nana.kituke_hairset" target="_blank" class="gallery-link">
+                📸 Instagramギャラリーを見る
+            </a>
         </div>
     </section>
 
-    <script>
-        window.addEventListener('scroll', function() {
-            const navbar = document.getElementById('navbar');
-            if (window.scrollY > 100) {
-                navbar.classList.add('scrolled');
-            } else {
-                navbar.classList.remove('scrolled');
-            }
-        });
-
-        document.
+    <section id="contact" class="section contact-section">
+        <div class="section-inner">
+            <h2 style="color: white;">予約・お問い合わせ</h2>
+            <p style="text-align: center; font-size: 1.2rem; opacity: 0.9; margin-bottom: 2rem;">
+                お気軽にお問い合わせください。丁寧にご対応いたします。
+            </p>
+            <div class="contact-methods">
+                <div class="contact-card">
+                    <div class="icon">📧</div>
+                    <h3>メール</h3>
+                    <p style="margin: 1rem 0;">件名：着付け依頼</p>
+                    <a href="mailto:kiki_lala112@yahoo.co.jp">kiki_lala112@yahoo.co.jp</a>
+                </div>
+                <div class="contact-card">
+                    <div class="icon">📲</div>
+                    <h3>Instagram DM</h3>
+                    <p style="margin: 1rem 0;">お気軽にメッセージをどうぞ</p>
+                    <a href="https://www.instagram.com/kirakira.nana.kituke_hairset" target="_blank">@kirakira.nana.kituke_hairset</a>
+                </div>
+                <div class="contact-card">
+                    <div class="icon">📝</div>
+                    <h3>Googleフォーム</h3>
+                    <p style="margin: 1rem 0;">24時間受付可能</p>
+                    <a href="https://forms.gle/Z8qCqXs7BnFrrM6x9" target="_blank">フォームはこちら</a>
+                </div>
+            </div>
+        </div>
+    </section
