--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             <div class="intro-content">
                 <p style="font-size: 1.2rem; line-height: 1.9;">
                     はじめまして。着付けサービス【KIRAKIRA】です。<br>
-                    着付け講習を1年学び、<br>実務経験は5年。着崩れしない・苦しくない着付けを心がけています。<br>
+                    着付け講習を1年学び、実務経験は5年。<br>着崩れしない・苦しくない着付けを心がけています。<br>
                     ハートフルな接客で、初めての方にも安心してお任せいただけます。<br>
                     ヘアセットにも対応しており、トータルで美しい着物姿をお手伝いいたします。
                 </p>
