--- a/index.html
+++ b/index.html
@@ -561,10 +561,17 @@
 
         .section h2.contact-title {
             color: white !important;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), 0 0 0 rgba(255, 255, 255, 0);
             font-weight: bold;
+            -webkit-text-stroke: 0;
+            background: none !important;
+            -webkit-background-clip: initial !important;
+            -webkit-text-fill-color: white !important;
+            background-clip: initial !important;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
-
         @media (max-width: 768px) {
             .hero h1 { font-size: 2.8rem; }
             .hero .subtitle { font-size: 1.1rem; }
