--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         <div class="section-inner">
             <h2>ギャラリー</h2>
             <p style="font-size: 1.2rem; margin-bottom: 3rem; line-height: 1.8; max-width: 800px; margin-left: auto; margin-right: auto;">
-                実際の着付けの様子や美しい着物姿をInstagramでご覧いただけます。<br>
+                実際に依頼を受け、着付けを致しました美しい着物姿を<br>Instagramでご覧いただけます。<br>
                 プロフェッショナルな技術で仕上げた作品を多数掲載しております。
             </p>
             <a href="https://www.instagram.com/kirakira.nana.kituke_hairset" target="_blank" class="gallery-link">
@@ -731,25 +731,25 @@
         <div class="section-inner">
             <h2 class="contact-title">予約・お問い合わせ</h2>
             <p style="text-align: center; font-size: 1.2rem; opacity: 0.9; margin-bottom: 2rem;">
-                お気軽にお問い合わせください。丁寧にご対応いたします。
+                以下のいずれかの方法で<br>お気軽にお問い合わせください。
             </p>
             <div class="contact-methods">
                 <div class="contact-card">
                     <div class="icon">📧</div>
                     <h3>メール</h3>
-                    <p style="margin: 1rem 0;">件名：着付け依頼</p>
+                    <p style="margin: 1rem 0;">件名に「着付け依頼」とご入力ください</p>
                     <a href="mailto:kiki_lala112@yahoo.co.jp">kiki_lala112@yahoo.co.jp</a>
                 </div>
                 <div class="contact-card">
                     <div class="icon">📲</div>
                     <h3>Instagram DM</h3>
-                    <p style="margin: 1rem 0;">お気軽にメッセージをどうぞ</p>
+                    <p style="margin: 1rem 0;">以下リンクのDMからお気軽にメッセージをどうぞ</p>
                     <a href="https://www.instagram.com/kirakira.nana.kituke_hairset" target="_blank">@kirakira.nana.kituke_hairset</a>
                 </div>
                 <div class="contact-card">
                     <div class="icon">📝</div>
                     <h3>Googleフォーム</h3>
-                    <p style="margin: 1rem 0;">24時間受付可能</p>
+                    <p style="margin: 1rem 0;">ご記入・選択をお願いいたします。</p>
                     <a href="https://forms.gle/Z8qCqXs7BnFrrM6x9" target="_blank">フォームはこちら</a>
                 </div>
             </div>
